--- a/View/LaunchPage.xaml
+++ b/View/LaunchPage.xaml
@@ -77,7 +77,7 @@ d:DesignHeight="520" d:DesignWidth="710"
         <Button Name="DownNewVersion" Content="Обновить" Width="150" Height="50" Margin="550,405,10,65" IsEnabled="False" Template="{StaticResource ResourceKey=ButtonUpdateOneTwo}"/>
         <Button Name="CheckVersion" Content="Проверить обновления" Width="150" Height="50" Margin="10,405,550,65" Template="{StaticResource ResourceKey=ButtonUpdateOneTwo}"/>
         <ProgressBar Name="SearchProgressBar" Minimum="0" Maximum="100" Margin="175,405,175,65" Template="{StaticResource ResourceKey=ProgressBarStyle}"/>
-        <CheckBox Content="Закрыть лаунчер после входа в игру" HorizontalAlignment="Left" Margin="478,10,0,0" ToolTip="Закрывает лаунчер после входа в игру(рекомендуется)" VerticalAlignment="Top" RenderTransformOrigin="0.533,0.662" Checked="CheckBox_Checked"/>
+        <CheckBox Content="Закрыть лаунчер после входа в игру" IsChecked="True" HorizontalAlignment="Left" Margin="478,10,0,0" ToolTip="Закрывает лаунчер после входа в игру(рекомендуется)" VerticalAlignment="Top" RenderTransformOrigin="0.533,0.662" Checked="CheckBox_Checked"/>
         <ComboBox x:Name="ComboBox_mode_Stalker" HorizontalAlignment="Left" Margin="441,37,0,0" ToolTip="Выбор части сталкера, если вы выберете не ту часть сталкера, то игра может не запуститься. Для сторонних модов, имеющие название exe файла:`xrEngine`, лучше выбирать ЗП" VerticalAlignment="Top" Width="120" SelectionChanged="ComboBox_SelectionChanged">
             <ComboBoxItem Content="ТЧ"/>
             <ComboBoxItem Content="ЧН"/>
